# heart_safe_rag

./: .env.example  .githubworkflowsci.yml  .gitignore  Dockerfile  Makefile  README.md  design.md  docker-compose.yml  evaluation.py  ingest.py  pyproject.toml  requirements.md  standards.md  tasks.md  test_rag_tracing.py
eval/data/: golden_dataset.json
eval/results/: evaluation_report.json
prompts/: system_prompt.txt
src/heartsafe_rag/: __init__.py  api.py  chunking.py  config.py  evaluate.py  exceptions.py  generation.py  ingest.py  ingestion.py  retrieval.py  schemas.py  upload_dataset.py
src/heartsafe_rag/templates/: chat.html
src/heartsafe_rag/utils/: logger.py
tests/: __init__.py  test_chunking.py  test_generation.py  test_retrieval.py
