[tool.poetry]
name = "heartsafe-rag"
version = "0.1.0"
description = "Zero-Hallucination Heart Failure Decision Support"
authors = ["MohamedFakhry2007 <108577055+MohamedFakhry2007@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "heartsafe_rag", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"

# LangChain Ecosystem
langchain = "^0.3"
langchain-community = "^0.3"
langchain-core = "^0.3"
langchain-groq = "^0.2"

# ML & Data
sentence-transformers = "^3.3"
faiss-cpu = "^1.9"
numpy = "^1.22"

# UI & API
streamlit = "^1.41"
groq = "^0.13"
requests = "^2.32"

# Documents & Parsing
pymupdf = "^1.24"
pillow = "^11.0"
python-docx = "^1.2"
python-pptx = "^1.0"

# Utilities
pydantic = "^2.10"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"  # For structured logging
pydantic-settings = "^2.12.0"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
heartsafe-ingest = "heartsafe_rag.cli:ingest"

[tool.ruff]
line-length = 120
target-version = "py311"
select = [
    "E", "F", "W", "I",  # Default Flake8 rules
    "UP",  # pyupgrade
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # Line too long - handled by black
    "F401",  # Unused imports - sometimes needed for type checking
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true