[tool.poetry]
name = "heartsafe-rag"
version = "0.1.0"
description = "Zero-Hallucination Heart Failure Decision Support"
authors = ["MohamedFakhry2007 <108577055+MohamedFakhry2007@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "heartsafe_rag", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"

# LangChain Ecosystem
langchain = "^0.3"
langchain-community = "^0.3"
langchain-core = "^0.3"
langchain-groq = "^0.2"

# ML & Data
torch = "^2.3.0"
sentence-transformers = "^3.3"
faiss-cpu = "^1.9"
numpy = "^1.22"

# UI & API
streamlit = "^1.41"
groq = "^0.13"
requests = "^2.32"

# Documents & Parsing
pymupdf = "^1.24"
pillow = "^11.0"
python-docx = "^1.2"
python-pptx = "^1.0"

# Utilities
pydantic = "^2.10"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"  # For structured logging
pydantic-settings = "^2.12.0"
pytest = "^9.0.2"
rank-bm25 = "^0.2.2"
langchain-huggingface = "^0.1.0"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pypdf = "^6.6.0"
jinja2 = "^3.1.6"
langfuse = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
heartsafe-ingest = "heartsafe_rag.cli:ingest"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I",  # Default Flake8 rules
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific rules
    "B",    # flake8-bugbear (Likely bugs)
    "C4",   # flake8-comprehensions (Better list comprehensions)
    "SIM",  # flake8-simplify (Simpler code suggestions)
    "N",    # pep8-naming (Naming conventions)
    "D",    # pydocstyle (Docstring enforcement)
    "PT",   # flake8-pytest-style (Pytest best practices)
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib (Use pathlib over os.path)
    "ERA",  # eradicate (No commented-out code)
    "PL",   # Pylint (General code quality)
    "TRY",  # tryceratops (Exception handling antipatterns)
    "T20",  # flake8-print (No print statements, use logging)
]
ignore = [
    "E501",   # Line too long - handled by formatter
    "D100",   # Missing docstring in public module (Optional, but good for scripts)
    "D104",   # Missing docstring in public package
    "TRY003", # Avoid specifying long messages outside the exception class (Too pedantic)
    "PLR2004" # Magic value used in comparison (Sometimes necessary for math/thresholds)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["D", "S101", "PLR2004"]  # Allow missing docstrings, asserts, and magic numbers in tests
"tasks.py" = ["T201"] # Allow print in task runner

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true
implicit_reexport = false
[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "ruff (>=0.14.11,<0.15.0)"
]
